# ext-capture

./: CMakeLists.txt  README.md
qml/: Demo.qml
src/: ExtCaptureItem.cpp  ExtCaptureItem.h  GbmBuffer.cpp  GbmBuffer.h  main_demo.cpp  plugin.cpp
